--- a/tutorials/estadisticaBasica.Rmd
+++ b/tutorials/estadisticaBasica.Rmd
@@ -235,7 +235,7 @@ muestra11
 
 Otra de las ventajas de R con respecto a otros lenguajes de programación es que sus paquetes deben de cumplir una serie de estándares para poder estar en el repositorio "oficial" [CRAN](https://cran.r-project.org/). Uno de los requerimientos es que las funciones de los diferentes paquetes deben de estar bien documentadas, es decir, debe existir un _manual_ que indique cómo se usa cada una de las funciones del paquete. Ese manual sigue siempre la misma estructura: nombre y descripción de la función, cómo se usa, los argumentos que necesita, el objeto que resulta al aplicar la función (Value), y unos ejemplos de cómo usar la función. Este manual o ayuda puede incluir más apartados, pero los mencionados suelen ser obligatorios. La forma de "llamar a la ayuda" en R es utilizando la función `help()`. Veamos un ejemplo:
 
-```{r chX, message=T, cache = T, eval = T}
+```{r ch10, message=T, cache = T, eval = T}
 # Vamos a intentar obtener la media del objeto letras
 mean(letras)
 
@@ -256,7 +256,27 @@ Quizás la lección más importante es que normalmente ningún usuario habitual 
 
 # **Prácticas**
 
--
+Los fungicidas triazoles son compuestos químicos que se aplican habitualmente en semillas de cultivos para prevenir el crecimiento de hongos patógenos de plantas. Sin embargo, cuando las semillas son consumidas por la fauna silvestre, estos compuestos pueden producir efectos perjudiciales en su sauld y desarrollo. Queremos estudiar el efecto de los fungicidas triazoles sobre la condición corporal (peso) en perdices rojas (_Alectoris rufa_). Para ello se han capturado un total de 300 perdices en tres hábitats diferentes (semiurbano, agrícola y monte matorralizado) a las que se les ha sexado y extraido muestras de heces para obtener la concentración de fungicidas triazoles (ngramos de compuesto/gramo de heces). La base de datos obtenida está almacenada en [este enlace](https://raw.githubusercontent.com/jabiologo/web/master/tutorials/estadisticaBasica_files/datosPracticas.csv). A continuación iremos realizando algunos test estadísticos vistos en teoría para responder a nuestra pregunta.
+
+```{r ch11, message=T, cache = T, eval = T}
+# Guardamos el archivo en un obejto que denominaremos "datos"
+datos <- read.csv("https://raw.githubusercontent.com/jabiologo/web/master/tutorials/estadisticaBasica_files/datosPracticas.csv")
+
+# Podemos utilizar la función str() para ver la estructura interna del data.frame
+str(datos)
+
+```
+<br/>
+
+### Vuestro turno
+* ¿Cuál es nuestra variable dependiente/respuesta?
+* ¿Cuál o cuáles podrían ser nuestras variables independientes o predictores?
+* ¿De qué tipo son nuestras variables? Contínuas, categóricas...
+* Si hay variables categóricas (factores), ¿cuántos niveles tienen?
+* ¿Qué tamaño muestral (_n_) tengo?
+* ¿Están mis datos balanceados?
+* ¿Qué distribución sigue mi variable respuesta? ¿y las variables predictoras?
+
 
 # **Ejercicios**
 
