--- a/tutorials/estadisticaBasica.Rmd
+++ b/tutorials/estadisticaBasica.Rmd
@@ -39,9 +39,9 @@ klippy::klippy(tooltip_message = 'Click para copiar', tooltip_success = 'Hecho!'
 En este espacio se encuentran los contenidos para las prácticas del tema **Estadística básica en ciencias experimentales** de la asignatura Bases de la investigación en ciencias experimentales, coordinada por Joaquín Vicente (Máster Universitario en Investigación Básica y Aplicada en Recursos Cinegéticos - MUIBARC). En los siguientes enlaces se pueden descargar los materiales se utilizarán durante el taller:
  
 * Una **introducción al entorno R**, la herramienta que utilizaremos en las prácticas
-* Presentaciones de los contenidos prácticos (ver **Prácticas** más abajo).
-* Scripts y datos necesarios para las sesiones prácticas (ver **Prácticas** más abajo).
-* Datos necesarios los ejercicios (ver **Ejercicios** más abajo).
+* Una [presentación](https://jabiologo.github.io/web/tutorials/estadisticaBasica_files/bases.pdf) de los contenidos prácticos.
+* [Scripts]() y [datos] necesarios para las sesiones prácticas (ver **Prácticas** más abajo).
+* [Datos]() necesarios los ejercicios (ver **Ejercicios** más abajo).
 
 Este tema se ha realizado en base a los contenidos previamente desarrollados por Lorenzo Pérez Rodríguez y extendidos por Jéssica Jiménez-Peñuela, Daniel Parejo-Pulido y Javier Fernández-López.
 
